k8s/lab18/deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: ivolve
spec:
  podSelector: {}
  policyTypes:
  - Ingress
